--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,25 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.bucket-pattern {
+  background-color: #faf9f6;
+  background-image: url('/bucket.svg');
+  background-repeat: repeat;
+  background-size: 400px 400px;
+  background-position: 100px 100px;
+  opacity: 0.08;
+  position: absolute;
+  inset: 0;
+}
+
+.bucket-pattern::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-image: url('/bucket.svg');
+  background-repeat: repeat;
+  background-size: 400px 400px;
+  background-position: 300px 500px;
+  opacity: 0.08;
+}
