--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ body {
 }
 
 .bucket-pattern {
-  background-color: #f5f9f6;
+  background-color: #faf9f6;
   background-image: url('/bucket.svg');
   background-repeat: repeat;
   background-size: 400px 400px;
